# training-assignment

./: -g  .~lock.TrainingAssignments.xlsx#  C_programing.md  TrainingAssignments.xlsx  codility_exam1.c  codility_linklist.c  complie_exam1  complie_exam2  complie_pointer  complie_read_write_exam  complie_string_exam  exam.txt  exam3.txt  exam4.txt  git_tutorial.md  gittoken  lib_training_exam.h  linux_basic.md  linux_command.md  pointer.c  read_write.c  read_write_exam.c  signal_handling  simple_multithread.c  string_exam.c  test  test.c  test.txt  test_string  training_exam  training_exam.c  vim.md  vim_command.md
CMake_Example/: CMakeLists.txt  Tutorial.c
CMake_Example/Makefile_Dir/: Makefile  lib_training_exam.h  read_write.c  signal_handler.c
CMake_Example/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.c
CMake_Example/Step1_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
Makefile_Example/: 2.c  3.c  Makefile1  Makefile2  Makefile3  Makefile4  Makefile5  a.h.gch  b.h.gch  c.h.gch  main.c  myapp
Theory/: CMake.md  C_programing.md  GDP_debuger_Cscope.md  git_tutorial.md  linux_command.md  shellscript_makefile.md  signal_handling.md  vim_command.md
build_lib/src/: main.c
build_lib/src/tq84/: add.c
cmakeQuichStart/: CMakeLists.txt  main
exam1/: exam1.c  out
openGL/: theory.md
openGL/excercise_0/: app  main.c
openGL/excercise_1/: Makefile  app  main.c
openGL/excercise_3/: Sky320by240.tga  main.c
openGL/excercise_4/: main.c
training_assign/: CMakeLists.txt  Makefile  Makefile_lib  myapp  test.txt
training_assign/Makefile_Dir/: execute_command.c  main.c
training_assign/Makefile_Dir/my_application/: application
training_assign/include/: lib_training_exam.h.gch
training_assign/include_app/: header_app.h
training_assign/include_lib/: header_lib.h
training_assign/src/: execute_command.c  main.c  read_write.c  signal_handler.c  training_exam.c
training_assign/src_app/: CMakeLists.txt  execute_command.c  main.c  signal_handler.c
training_assign/src_lib/: CMakeLists.txt  read_write.c
training_assign_build_lib/: test_26_09.txt
training_assign_build_lib/src/: main_training_exam.c
